ch.4 correct \texttt placement

--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -206,7 +206,7 @@ Pozice meče má dvě složky - lineární a rotační. Interně je reprezentuje
   \label{obr05:swordPositioningDiagram}
 \end{figure} 
 
-Argument \textit{MoveSword()} má tedy tyto složky:
+Argument \texttt{MoveSword()} má tedy tyto složky:
 \begin{enumerate}
     \item \textbf{Poloha rukojeti} (Vektor) - poloha kam se má posunout \texttt{anchor} meče ve světových souřadnicích.
     \item \textbf{Směr meče} (Vektor) - přičtením k Poloze rukojeti dostaneme bod ve světových souřadnicích, kterým má čepel meče procházet.
