ch.4-5 incorporated feedback

--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -257,7 +257,7 @@ Nyní k implementaci. Na vstupu dostaneme tyto informace:
 \begin{enumerate}
     \item \texttt{Bod průniku} - Bod ve kterém paprsek protnul ovladací kulovou plochu
     \item \texttt{Střed ovladací kružnice} - Střed kružnice, jíž paprsek protnul
-    \item \texttt{Bod nápovědy} - Pevný bod, který nám pomůže vybrat směr meče
+    \item \texttt{Bod nápovědy} - Pevný bod, který nám pomůže vybrat směr meče (jeho umístění zmíníme později)
 \end{enumerate}
 
 Dále pevné body, které vyznačíme na meči:
