--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -306,3 +306,10 @@
   year        = {2016},
   url         = {https://doi.org/10.3390/s16040477},
 }
+@phdthesis{LudonarrativeDissonance,
+  author      = {Seraphine, Frédéric},
+  school      = {The University of Tokyo},
+  title       = {Ludonarrative Dissonance: Is Storytelling About Reaching Harmony?},
+  year        = {2016},
+  url         = {https://www.researchgate.net/publication/307569310_Ludonarrative_Dissonance_Is_Storytelling_About_Reaching_Harmony},
+}
