--- a/cs/uvod.tex
+++ b/cs/uvod.tex
@@ -5,7 +5,7 @@ Boj nablízko s chladnou zbraní najdeme v mnoha videohrách. Mezi žánry, kter
 
 Herní mechaniky, skrz které je boj zblízka realizován, si od počátku éry videoher prošly složitou evolucí a přirozeně každý žánr je adaptuje osobitým způsobem, aby ladily s jeho dalšími specifiky. I tak je ale překvapivě jednoduché popsat určité vlastnosti, které vykrystalizovaly jako společné jádro, jež většinová část her sdílí.
 
-Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto prostoduché rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\cite{DieByTheSword}, \cite{MountAndBlade}, \cite{KCD}) - podrobněji je rozebereme v první kapitole (\ref{gamesWithMoreDirectControll}). Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
+Zpravidla zbraň ve hře funguje jako "černá skříňka" - hráč ji aktivuje stisknutím tlačítka - a postava zaútočí jak sama uzná za vhodné, například přehráním jedné ze seznamu předem připravených animací. Toto prostoduché rozhraní má za výhody přívětivost a snadnou uchopitelnost pro nové hráče a také to, že funguje univerzálně pro víceméně libovolnou zbraň, od jednoručního meče přes halapartnu až po rozbitou lahev od pálenky. Nevýhoda je pak ale, že vzniká výrazný rozdíl mezi tím, jak hráč hraje, a co postava dělá. Hráč tím pádem může mít pocit nedostatečné kontroly a může trpět jeho imerze. Komerčně úspěšných her, které se pokusily hráči dát nad zbraní přímější kontrolu, najdeme v historii pouze několik (\cite{DieByTheSword}, \cite{MountAndBlade}, \cite{KCD}) - podrobněji je rozebereme v první kapitole. Akademický výzkum pak v tomto směru, pokud je autorovi této práce známo, není prakticky žádný, a celkově tedy jde o oblast překvapivě málo prozkoumanou.
   
 Chceme-li hráči umožnit přímější kontrolu nad zbraní, mezi očividné výzvy patří návrh schéma ovládání. Klasicky používané periferie jako je počítačová myš či ovladač u herní konzole poskytují dvourozměrnou informaci, chladná zbraň je však obecný objekt v 3D prostoru se třemi stupni volnosti pro pohyb a dalšími třemi pro rotaci, zanedbání jakéhokoliv z nich přinese netriviální důsledky. Je tedy zřejmé, že pomocí klasických periferií není možné dosáhnout dokonale jemného ovládání, které by bylo zároveň pro hráče intuitivní - je třeba nalézt vhodný kompromis. Alternativní periferie, které tento problém nemají, existují (zejména ovladače pro VR\footnote{\Acl{VR} - viz kapitolu \ref{VRControllers}}), avšak stále nejsou natolik rozšířené, aby s nimi mohl počítat herní mainstream. 
 
