ch.1 summary correction

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -406,6 +406,6 @@ Ve videohře chladná zbraň typicky figuruje jako ''černá skříňka'' - hrá
 
 Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu. Hra, které by se zdařilo poskytnout hráči nad zbraní bezprostřední kontrolu, by tím mohla získat mnoho benefitů - mimo zjevné atraktivity plynoucí z neohranosti konceptu například taková zbraň má potenciál stát se vděčným zdrojem emergentního gameplaye.
 
-Představili jsme si podrobněji několik her, které se o dosažení tohoto cíle pokoušely. Jedinou z nich, která umožnila skutečně volný pohyb, a rovněž jedinou, které se nedostalo komerčního úspěchu, bylo Die by the Sword \cite{DieByTheSword}. Tato hra kombinací realistické fyzikální simulace a procedurální animace vytvořila systém, kterému nečinil problém zápas libovolných entit vybavených libovolným počtem končetin třímajících meč, ba dokonce umožnil dynamické odsekávání částí těla, na které nepřátelé patřičně reagovali. 
+Představili jsme si podrobněji několik her, které se o dosažení tohoto cíle pokoušely. Oba komerčně úspěšní zástupci (\cite{MountAndBlade} \cite{KCD}) se ubírali cestou omezení množiny stavů, ve kterých se meč může nalézat, na nemalou ale konečnou velikost. Jejich společným znakem bylo velmi dobré ztvárnění boje člověka proti člověku, avšak vykoupené nízkou flexibilitou znemožňující zakomponování nehumanoidních nepřátel či použití meče k čemukoliv jinému než přímočarému boji.
 
-Kamenem úrazu se však hře stalo \textbf{ovládání}. Problém plynul z faktu, že tradičně používané ovládací periferie poskytují dvourozměrný vstup, který nelze přímočaře namapovat na 3D polohu a rotaci meče. Pro hry usilující o takovou míru volnosti jako Die by the Sword jde do dnešní doby o těžký problém, pro který nebylo nalezeno uspokojivé řešení - jedinou možností se zdá být výměna myši za drahý \acs{VR} ovladač. Cílem této práce je vytvořit otevřenou platformu, která umožní v této oblasti provádět experimentální výzkum.
+Protipólem pak bylo Die by the Sword \cite{DieByTheSword}. To kombinací realistické fyzikální simulace a procedurální animace vytvořilo systém, který nad pohybem meče umožnil spojitou kontrolu a nečinil mu problém zápas libovolných entit vybavených libovolným počtem končetin třímajících meč. Kamenem úrazu se mu však stalo ovládání. Problém plynul z faktu, že tradičně používané ovládací periferie poskytují dvourozměrný vstup, který nelze přímočaře namapovat na 3D polohu a rotaci meče. Pro hry usilující o takovou míru volnosti jako Die by the Sword jde do dnešní doby o těžký problém, pro který nebylo nalezeno uspokojivé řešení - jedinou možností se zdá být výměna myši za drahý \acs{VR} ovladač.
